--- a/template.html
+++ b/template.html
@@ -3,7 +3,12 @@
 <p>{title}</p>
 <div id="page" class="site"><header id="masthead" class="site-header">
 <div class="container">
-<div class="site-branding"><a href="../"> <img src="img/logo.svg" alt="Site Logosu" width="180" height="47" /> </a>
+<div class="site-branding reklam-alani">
+  <a href="https://www.ornek-reklam.com" target="_blank">
+    <img src="img/reklam-banner.jpg" alt="Reklam Alanı" width="728" height="90" />
+  </a>
+</div>
+
 <p class="site-description">Pop&uuml;ler &uuml;r&uuml;nleri takip eder, en iyi zamanı se&ccedil;menize yardımcı olur.</p>
 </div>
 </div>
@@ -22,7 +27,7 @@
 <section class="widget widget_search"><form action="ara.php" method="get"><label for="search">&Uuml;r&uuml;n Ara</label> <input id="search" name="s" required="" type="search" placeholder="&Uuml;r&uuml;n adı girin..." /> <button type="submit">Ara</button></form></section>
 <section class="widget">
 <h2>Bildirim Al</h2>
-<a class="btn" style="background-color: #e67e22; color: #fff; padding: 8px 12px; display: inline-block; text-decoration: none;" href="https://t.me/onual_firsat" target="_blank">Telegram&rsquo;dan Takip Et</a></section>
+<a class="btn" style="background-color: #e67e22; color: #fff; padding: 8px 12px; display: inline-block; text-decoration: none;" href=https://t.me/amazonindirimler1 target="_blank">Telegram&rsquo;dan Takip Et</a></section>
 </aside>
 </div>
 <!-- #page -->
