--- a/template.html
+++ b/template.html
@@ -1,35 +1,105 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <title>İndirim Sinyali</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{ürün_adı}</title>
   <style>
-    body {{ font-family: sans-serif; padding: 20px; max-width: 700px; margin: auto; }}
-    h1, h2 {{ color: #1976d2; }}
-    ul {{ list-style: none; padding: 0; }}
-    li {{ margin: 8px 0; }}
-    a {{ text-decoration: none; color: #d32f2f; }}
-    footer {{ margin-top: 40px; font-size: 0.9em; color: #555; }}
+    /* Tüm CSS yukarıdaki ana sayfa stilinden alınmalı */
+    /* Sadece ürün içeriği için ek stil: */
+    .urun-kapsul {
+      padding: 40px;
+      max-width: 700px;
+      margin: auto;
+    }
+    .urun-kapsul h2 {
+      font-size: 28px;
+      color: #ff6600;
+      margin-bottom: 10px;
+    }
+    .urun-kapsul p {
+      font-size: 16px;
+      margin: 6px 0;
+    }
+    .deal-button {
+      display: inline-block;
+      margin: 15px 0;
+      padding: 10px 15px;
+      background: #1976d2;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <h1>İndirim Sinyali</h1>
-  <p>İndirimli ürünleri anlık olarak takip eden bir bildirim sistemidir. Ürün sayfaları otomatik olarak güncellenir ve her kategori için ayrı bağlantılar sunar.</p>
-  <p>Telegram kanalımız üzerinden en güncel fırsatları doğrudan alabilir, ürün detaylarına tek tıkla ulaşabilirsiniz. Sistemimiz tamamen ücretsizdir ve kullanıcı odaklıdır.</p>
+  <!-- Navigasyon -->
+  <header class="navbar">
+    <nav>
+      <ul>
+        <li><a href="/">Anasayfa</a></li>
+        <li>
+          <div class="kategori-baslik" onclick="toggleKategoriler()">Kategoriler</div>
+          <ul class="kategori-listesi" id="kategoriListesi">
+            <li><a href="/Elektronik"><span class="icon">💻</span> Elektronik</a></li>
+            <li><a href="/Giyim"><span class="icon">👕</span> Giyim</a></li>
+          </ul>
+        </li>
+        <li><a href="#hakkimizda">Hakkımızda</a></li>
+        <li><a href="#iletisim">İletişim</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <h2>Kategoriler</h2>
-  <ul>
-    <li><a href="elektronik.html">Elektronik Ürünleri</a></li>
-    <li><a href="giyim.html">Giyim Ürünleri</a></li>
-  </ul>
+  <!-- Ürün İçeriği -->
+  <main class="urun-kapsul">
+    <h2>{ürün_adı}</h2>
+    <p>💰 {fiyat} TL</p>
+    <p>↻ {güncelleme_tarihi}</p>
+    <p>📦 {kargo_bilgisi}</p>
+    <p>📲 Bu ürün indirime girdiğinde {bildirim_kanalı}’dan bildirim alın!</p>
+    <a href="{ürün_linki}" class="deal-button">🔗 Ürüne Git</a>
+    <hr />
+    <h3>📋 Ürün Bilgisi</h3>
+    <ul>
+      <li>Satıcı: {satıcı}</li>
+    </ul>
+  </main>
 
-  <h2>İletişim</h2>
-  <p>Telegram kanalımız: <a href="https://t.me/amazonindirimler1">@amazonindirimler1</a></p>
-  <p>E-posta: <a href="mailto:destek@indirimsinyali.com">destek@indirimsinyali.com</a></p>
+  <!-- Footer -->
+  <footer class="footer">
+    <section id="hakkimizda">
+      <h2>Hakkımızda</h2>
+      <p>
+        İndirim Sinyali, indirimli ürünleri anlık olarak takip eden bir bildirim sistemidir.
+        Ürün sayfaları otomatik olarak güncellenir ve her kategori için ayrı bağlantılar sunar.
+        Telegram kanalımız üzerinden en güncel fırsatları doğrudan alabilir, ürün detaylarına tek tıkla ulaşabilirsiniz.
+        Sistemimiz tamamen ücretsizdir ve kullanıcı odaklıdır.
+      </p>
+    </section>
 
-  <footer>
-    © 2025 İndirimsinyali - Tüm hakları saklıdır.
+    <section id="iletisim">
+      <h2>İletişim</h2>
+      <p>
+        Telegram kanalımız: <a href="https://t.me/amazonindirimler1" target="_blank">@amazonindirimler1</a><br />
+        E-posta: <a href="mailto:destek@indirimsinyali.com">destek@indirimsinyali.com</a>
+      </p>
+    </section>
   </footer>
+
+  <div class="copyright">
+    © 2025 İndirimsinyali - Tüm hakları saklıdır.
+  </div>
+
+  <script>
+    function toggleKategoriler() {
+      const liste = document.getElementById("kategoriListesi");
+      liste.style.display = (liste.style.display === "block") ? "none" : "block";
+    }
+    window.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("kategoriListesi").style.display = "none";
+    });
+  </script>
 </body>
 </html>
