--- a/template.html
+++ b/template.html
@@ -32,18 +32,18 @@
       font-weight: bold;
       padding: 8px 12px;
     }}
-    .entry-title {{ color: #ff6600; font-size: 28px; margin: 20px 0; text-align: center; }}
+    .entry-title {{ color: #000000; font-size: 28px; margin: 20px 0; text-align: center; }}
     .post-thumbnail img {{
       max-width: 100%;
       height: auto;
       display: block;
       margin: auto;
     }}
-    .fiyat {{ font-size: 22px; color: #d32f2f; font-weight: bold; text-align: center; display: block; }}
+    .fiyat {{ font-size: 22px; color: #000000; font-weight: bold; text-align: center; display: block; }}
     .guncel {{ font-size: 14px; color: #888; text-align: center; display: block; }}
     .btn {{
       display: block;
-      background-color: #e67e22;
+      background-color: #0077cc;
       color: white;
       padding: 12px 20px;
       text-decoration: none;
