--- a/template.html
+++ b/template.html
@@ -11,6 +11,15 @@
       background-color: #ffffff;
       color: #333;
     }}
+    .logo-container {
+      text-align: center;
+      padding: 10px 0;
+    }
+
+    .logo {
+      max-width: 180px;
+      height: auto;
+    }
     .navbar {{
       background-color: #ff6600;
       padding: 15px;
@@ -78,6 +87,9 @@
   </style>
 </head>
 <body>
+  <div class="logo-container">
+    <img src="logo.png" alt="İndirim Sinyali" class="logo" />
+  </div>
   <!-- Navigasyon Bar -->
   <header class="navbar">
     <nav>
