--- a/template.html
+++ b/template.html
@@ -11,15 +11,15 @@
       background-color: #ffffff;
       color: #333;
     }}
-    .logo-container {
+    .logo-container {{
       text-align: center;
       padding: 10px 0;
-    }
+    }}
 
-    .logo {
+    .logo {{
       max-width: 180px;
       height: auto;
-    }
+    }}
     .navbar {{
       background-color: #ff6600;
       padding: 15px;
