--- a/template.html
+++ b/template.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div class="logo-container">
-    <img src="assets/logo.png" alt="İndirim Sinyali" class="logo" />
+    <img src="img/logo.png" alt="İndirim Sinyali" class="logo" />
   </div>
   <!-- Navigasyon Bar -->
   <header class="navbar">
