--- a/template.html
+++ b/template.html
@@ -90,7 +90,7 @@
   <header class="navbar">
     <div class="navbar-inner">
       <div class="logo-left">
-        <img src="img/logo.png" alt="İndirim Sinyali" class="logo" />
+        <img src="../img/logo.png" alt="İndirim Sinyali" class="logo" />
       </div>
       <nav class="menu-right">
         <ul>
