--- a/template.html
+++ b/template.html
@@ -5,51 +5,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{title}</title>
   <style>
-    body {{
+    body {
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: #ffffff;
       color: #333;
-    }}
-    .logo {{
-      max-height: 50px;
-      height: auto;
-    }}
-    .navbar {{
+    }
+    .navbar {
       background-color: #ffffff;
       border-bottom: 2px solid #ffcc99;
       padding: 20px 30px;
-    }}
-    .navbar-inner {{
+    }
+    .navbar-inner {
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
-    }}
-    .menu-right ul {{
+      gap: 12px;
+    }
+    .logo-left .logo {
+      max-height: 60px;
+      height: auto;
+      width: auto;
+    }
+    .menu-right ul {
       list-style: none;
       display: flex;
       gap: 20px;
       margin: 0;
       padding: 0;
-    }}
-    .menu-right a {{
+      flex-wrap: wrap;
+    }
+    .menu-right a {
       font-size: 16px;
       color: #ff6600;
       text-decoration: none;
       font-weight: bold;
       padding: 8px 12px;
-    }}
-    .entry-title {{ color: #000000; font-size: 28px; margin: 20px 0; text-align: center; }}
-    .post-thumbnail img {{
+    }
+    .entry-title {
+      color: #000000;
+      font-size: 28px;
+      margin: 20px 0;
+      text-align: center;
+    }
+    .post-thumbnail img {
       max-width: 100%;
       height: auto;
       display: block;
       margin: auto;
-    }}
-    .fiyat {{ font-size: 22px; color: #000000; font-weight: bold; text-align: center; display: block; }}
-    .guncel {{ font-size: 14px; color: #888; text-align: center; display: block; }}
-    .btn {{
+    }
+    .fiyat {
+      font-size: 22px;
+      color: #000000;
+      font-weight: bold;
+      text-align: center;
+      display: block;
+    }
+    .guncel {
+      font-size: 14px;
+      color: #888;
+      text-align: center;
+      display: block;
+    }
+    .btn {
       display: block;
       background-color: #0077cc;
       color: white;
@@ -61,11 +80,23 @@
       text-align: center;
       margin: 20px auto;
       width: fit-content;
-    }}
-    .telegram {{ text-align: center; margin: 10px 0; }}
-    .telegram a {{ color: #0077cc; text-decoration: none; font-weight: bold; }}
-    .mobil-uyari {{ font-size: 14px; color: #999; text-align: center; display: block; }}
-    footer {{
+    }
+    .telegram {
+      text-align: center;
+      margin: 10px 0;
+    }
+    .telegram a {
+      color: #0077cc;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .mobil-uyari {
+      font-size: 14px;
+      color: #999;
+      text-align: center;
+      display: block;
+    }
+    footer {
       background-color: #f9f9f9;
       padding: 30px;
       margin-top: 40px;
@@ -74,15 +105,15 @@
       line-height: 1.6;
       color: #333;
       text-align: center;
-    }}
-    .copyright {{
+    }
+    .copyright {
       text-align: center;
       font-size: 13px;
       color: #666;
       padding: 15px 0;
       background-color: #f2f2f2;
       border-top: 1px solid #ddd;
-    }}
+    }
   </style>
 </head>
 <body>
