--- a/template.html
+++ b/template.html
@@ -14,18 +14,16 @@
     .navbar {{
       background-color: #ffffff;
       border-bottom: 2px solid #ffcc99;
-      padding: 20px 30px;
+      padding: 16px 24px;
     }}
     .navbar-inner {{
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
-      gap: 12px;
+      flex-wrap: nowrap;
     }}
     .logo-left .logo {{
-      max-height: 60px;
-      height: auto;
+      max-height: 90px;
       width: auto;
     }}
     .menu-right ul {{
@@ -34,7 +32,6 @@
       gap: 20px;
       margin: 0;
       padding: 0;
-      flex-wrap: wrap;
     }}
     .menu-right a {{
       font-size: 16px;
