--- a/template.html
+++ b/template.html
@@ -67,21 +67,41 @@
     .mobil-uyari {{ font-size: 14px; color: #999; text-align: center; display: block; }}
     footer {{
       background-color: #f9f9f9;
-      padding: 30px;
+      padding: 30px 20px;
       margin-top: 40px;
-      border-top: 1px solid #ddd;
+      border-top: 2px solid #ffcc99;
       font-size: 15px;
       line-height: 1.6;
       color: #333;
       text-align: center;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
     }}
-    .copyright {{
+
+    footer section {{
+      margin-bottom: 24px;
+    }}
+
+    footer h2 {{
+      font-size: 20px;
+      margin-bottom: 12px;
+      color: #ff6600;
+    }}
+
+    footer p {{
+      margin: 0 auto;
+      max-width: 90%;
+      word-wrap: break-word;
+    }}
+    .copyright{{ 
       text-align: center;
       font-size: 13px;
       color: #666;
-      padding: 15px 0;
+      padding: 12px 0;
       background-color: #f2f2f2;
-      border-top: 1px solid #ddd;
+      border-top: 2px solid #ffcc99;
+      margin-top: -10px;
     }}
   </style>
 </head>
