--- a/template.html
+++ b/template.html
@@ -86,7 +86,7 @@
     footer h2 {{
       font-size: 20px;
       margin-bottom: 12px;
-      color: #ff6600;
+      color: #000000;
     }}
 
     footer p {{
