--- a/template.html
+++ b/template.html
@@ -23,8 +23,9 @@
       flex-wrap: nowrap;
     }}
     .logo-left .logo {{
-      max-height: 90px;
+      height: 95px;
       width: auto;
+      max-width: 100%;
     }}
     .menu-right ul {{
       list-style: none;
@@ -93,6 +94,7 @@
       margin: 0 auto;
       max-width: 90%;
       word-wrap: break-word;
+      overflow-wrap: break-word;
     }}
     .copyright{{ 
       text-align: center;
