--- a/template.html
+++ b/template.html
@@ -21,6 +21,7 @@
       justify-content: space-between;
       align-items: center;
       flex-wrap: nowrap;
+      gap: 12px;
     }}
     .logo-left .logo {{
       height: 95px;
