--- a/template.html
+++ b/template.html
@@ -115,7 +115,8 @@
       <div class="logo-left">
         <img src="../img/logo.png" alt="İndirim Sinyali" class="logo" />
       </div>
-      <nav class="menu-right">
+      <div class="hamburger" onclick="toggleMenu()">☰</div>
+      <nav class="menu-right" id="menu">
         <ul>
           <li><a href="/">Anasayfa</a></li>
           <li><a href="#hakkimizda">Hakkımızda</a></li>
