--- a/template.html
+++ b/template.html
@@ -26,9 +26,9 @@
       gap: 12px;
     }}
     .logo-left .logo {{
-      height: 95px;
-      width: auto;
-      max-width: 100%;
+      height: auto;
+      width: 240px;
+      max-height: 100%;
     }}
     .hamburger {{
       display: none;
