--- a/template.html
+++ b/template.html
@@ -101,16 +101,18 @@
     .guncel {{ font-size: 14px; color: #888; text-align: center; display: block; }}
     .btn {{
       display: block;
-      background-color: #0077cc;
-      color: white;
-      padding: 12px 20px;
+      background: linear-gradient(to bottom, #66ccff, #3399ff); /* 🔧 mavi geçişli arka plan */
+      color: #e6f2ff; /* 🔧 açık mavi yazı */
+      padding: 14px 24px;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 6px;
       font-size: 20px;
       font-weight: bold;
       text-align: center;
       margin: 20px auto;
       width: fit-content;
+      border: 1px solid #0066cc;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }}
     .telegram {{ text-align: center; margin: 10px 0; }}
     .telegram a {{ color: #0077cc; text-decoration: none; font-weight: bold; }}
@@ -187,7 +189,7 @@
       <div class="telegram">
         <a href="https://t.me/amazonindirimler1" target="_blank">📲 Bu ürün indirime girdiğinde Telegram’dan bildirim alın!</a>
       </div>
-      <a class="btn" href="{link}" target="_blank">Fırsata Git</a>
+      <a class="btn" href="{link}" target="_blank">🛍️ ürüne git</a>
       <span class="mobil-uyari">📢 İlgili ürün için fırsata git bağlantısına tıklayın.</span>
     </div>
   </article>
